# daybook

./: .gitignore  README.md  package.json
search-server/: Cargo.toml  README.md
search-server/src/: entry.rs  helpers.rs  main.rs  mutation.rs  query.rs  start.rs
web-app/: README.md  jest.config.js  next.config.js  package.json  tsconfig.json
web-app/src/: global.d.ts
web-app/src/components/: Aside.tsx  EntryCard.tsx  EntryForm.tsx  Fab.tsx  Grid.tsx  Layout.tsx  Markdown.tsx  MdStyle.ts  Navigation.tsx  NoUser.tsx  Recent.tsx  Search.tsx  SideMenu.tsx  UserAvatar.tsx  Workspace.tsx
web-app/src/hooks/: useConstant.ts  usePollingUpdates.tsx  useRecent.ts  useStats.ts
web-app/src/interfaces/: entry.ts  index.ts  result.ts  update.ts
web-app/src/pages/: _app.tsx  _document.tsx  create.tsx  index.tsx
web-app/src/pages/api/: daybooks.ts  reveal.ts
web-app/src/pages/api/auth/: [...auth0].ts
web-app/src/pages/api/search/: bulk.ts  check_update.ts  create.ts  edit.ts  infinite.ts  later_than.ts  query.ts  stats.ts  update.ts
web-app/src/pages/api/search/delete/: [id].ts
web-app/src/pages/api/search/entry/: [id].ts
web-app/src/pages/delete/: [id].tsx
web-app/src/pages/edit/: [id].tsx
web-app/src/pages/view/: [id].tsx
web-app/src/styles/: global.ts  global.tsx  normalize.ts  nprogress.css  nprogress.ts  reset.css  reset.ts  theme.ts
web-app/src/utils/: auth0.ts  cloak.ts  recent.ts  withAccessToken.ts
