[package]
name = "search-server"
version = "0.1.0"
authors = ["Joseph Chamochumbi <sephxd1234@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
meilisearch-sdk = "0.8.0"
serde = "1"
serde_json = "1"