[package]
name = "search-server"
version = "0.1.0"
authors = ["Joseph Chamochumbi <sephxd1234@gmail.com>"]
edition = "2018"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.5.4"
actix-web = { version = "3" , features = ["openssl"] }
actix-web-httpauth = "0.5.1"
cached = "0.23.0"
ctrlc = "3.1.9" 
dotenv = "0.15.0"
env_logger = "0.8.3"
meilisearch-sdk = "0.8.0"
openssl = "0.10.29"
serde = "1"
serde_json = "1"